--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <link rel ="stylesheet" href ="style.css">
+    <java src="java.js"></java>
+  </head>
+  <body>
+    <nav class="navstyle">
+      <a href="#one">Main</a>
+      <a href="#two">Team</a>
+      <a href="#three">Links</a>
+    </nav>
+    <div class="heroimg">
+      <button class="button">Download</button>
+    </div>
+    <div class="slide">
+      <p>Title for slideshow</p>
+      <div>
+        <img src="https://picsum.photos/id/756/400/400.jpg" alt="" id="pic">
+      </div>
+      <a class="bck" onclick="change(-1)">&#10094;</a>
+      <a class="fwd" onclick="change(1)">&#10095;</a>
+    </div>
+  </body>
+</html>
