--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   </head>
   <body>
     <nav class="navstyle">
-      <a href="#one">Main</a>
-      <a href="#two">Team</a>
-      <a href="#three">Links</a>
+      <a href="index.html">Main</a>
+      <a href="team/index.html">Team</a>
+      <a href="links/index.html">Links</a>
     </nav>
     <div class="heroimg">
       <button class="button">Download</button>
