--- a/team/index.html
+++ b/team/index.html
@@ -1,1 +1,21 @@
-<p>team page will go here</p>
+<!DOCTYPE html>
+<html>
+  <head>
+    <link rel ="stylesheet" href ="style.css">
+    <script src="java.js"></script>
+  </head>
+  <body>
+    <nav class="navstyle">
+      <a href="index.html">Main</a>
+      <a href="team/index.html">Team</a>
+      <a href="links/index.html">Links</a>
+    </nav>
+    <div class = "column">
+      <div class ="card">
+        <img alt ="port image">
+        <h4>name</h4>
+        <p>role</p>
+      </div>
+    </div>
+  </body>
+</html>
