--- a/team/index.html
+++ b/team/index.html
@@ -6,9 +6,9 @@
   </head>
   <body>
     <nav class="navstyle">
-      <a href="index.html">Main</a>
-      <a href="team/index.html">Team</a>
-      <a href="links/index.html">Links</a>
+      <a href="../index.html">Main</a>
+      <a href="../team/index.html">Team</a>
+      <a href="../links/index.html">Links</a>
     </nav>
     <div class = "column">
       <div class ="card">
