--- a/links/index.html
+++ b/links/index.html
@@ -1,1 +1,15 @@
-<p>links page will go here</p>
+<!DOCTYPE html>
+<html>
+  <head>
+    <link rel ="stylesheet" href ="../style.css">
+    <script src="../java.js"></script>
+  </head>
+  <body>
+    <nav class="navstyle">
+      <a href="../index.html">Main</a>
+      <a href="../team/index.html">Team</a>
+      <a href="../links/index.html">Links</a>
+    </nav>
+    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target ="blank"> <img src="../images/epictestimage.jpg"> </a>
+  </body>
+</html>
