--- a/team/index.html
+++ b/team/index.html
@@ -12,9 +12,19 @@
     </nav>
     <div class = "column">
       <div class ="card">
-        <img alt ="port image">
-        <h4>name</h4>
-        <p>role</p>
+        <img src="../image/cardtestimg" alt ="port image">
+        <h4>Person A</h4>
+        <p>Role</p>
+      </div>
+      <div class ="card">
+        <img src="../image/cardtestimg" alt ="port image">
+        <h4>Person B</h4>
+        <p>Role</p>
+      </div>
+      <div class ="card">
+        <img src="../image/cardtestimg" alt ="port image">
+        <h4>Person C</h4>
+        <p>Role</p>
       </div>
     </div>
   </body>
