--- a/team/index.html
+++ b/team/index.html
@@ -12,17 +12,17 @@
     </nav>
     <div class = "column">
       <div class ="card">
-        <img src="../image/cardtestimg" alt ="port image">
+        <img src="../images/cardtestimg.jpg" alt ="port image">
         <h4>Person A</h4>
         <p>Role</p>
       </div>
       <div class ="card">
-        <img src="../image/cardtestimg" alt ="port image">
+        <img src="../images/cardtestimg.jpg" alt ="port image">
         <h4>Person B</h4>
         <p>Role</p>
       </div>
       <div class ="card">
-        <img src="../image/cardtestimg" alt ="port image">
+        <img src="../images/cardtestimg.jpg" alt ="port image">
         <h4>Person C</h4>
         <p>Role</p>
       </div>
