--- a/links/index.html
+++ b/links/index.html
@@ -10,6 +10,7 @@
       <a href="../team/index.html">Team</a>
       <a href="../links/index.html">Links</a>
     </nav>
-    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target ="blank"> <img src="../images/epictestimage.jpg" class="linkimg" alt="image for link"> </a>
+    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target ="blank"> <img src="../images/Gamecon+With+Border.png" class="linkimg" alt="link for gamecon"> </a>
+    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target ="blank"> <img src="../images/Itch_io.svg" class="linkimg" alt="link for itch"> </a>
   </body>
 </html>
