--- a/links/index.html
+++ b/links/index.html
@@ -11,6 +11,6 @@
       <a href="../links/index.html">Links</a>
     </nav>
     <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target ="blank"> <img src="../images/Gamecon+With+Border.png" class="linkimg" alt="link for gamecon"> </a>
-    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target ="blank"> <img src="../images/Itch_io.svg" class="linkimg" alt="link for itch"> </a>
+    <a href="https://clowncorpotu.itch.io/workplace-compensation" target ="blank"> <img src="../images/Itch_io.svg" class="linkimg" alt="link for itch"> </a>
   </body>
 </html>
