--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <a href="links/index.html">Links</a>
     </nav>
     <div class="heroimg">
-      <button class="button">Download</button>
+      <a class="button">Download</a>
     </div>
     <div class="slide">
       <p>Title for slideshow</p>
