--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <a href="links/index.html">Links</a>
     </nav>
     <div class="heroimg">
-      <a class="button">Download</a>
+      <a href ="https://clowncorpotu.itch.io/workplace-compensation" target="blank" class="button">Download</a>
     </div>
     <div class="slide">
       <p>Title for slideshow</p>
